--- a/app/views/ask/_location.html.erb
+++ b/app/views/ask/_location.html.erb
@@ -2,8 +2,7 @@
 	<% assist = @assist_available.shuffle.first %>
 	<div style="position:absolute; left:2px; top:0;"><%= link_to '<span class="glyphicon glyphicon-remove" data-toggle="tooltip" title="Cancel your help request!"></span>'.html_safe, ask_cancel_path, method: :post, remote: true %></div>
 	<h3 style="margin-bottom:0.75em;"><%= @greeting %>!<br> What's your location?</h3>
-	<img id="waiting-gif" src="<%= assist.avatar if assist %>" style="max-width: 120px; max-height: 120px;">
-	<p style="margin-top:1em; margin-bottom:2.5em;"><%= @assist_available.length %> staff are currently available.</p>
+	<p>Entering your location details ensures that we can find you if we'd like to discuss something.</p>
 	<%= form_tag(ask_set_location_path, method: :post, remote: true) do %>
 		<input type="text" name="location" class="form-control" required placeholder="" style="margin-top:0.5em">
 		<button id="loc-button" data-loading-text="Just a sec..." type="submit" style="margin-top:0.5em; margin-bottom:0.5em" class="btn btn-default btn-sm btn-block btn-warning" name="how" value="hands">That's my location!</button>
