--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
 
 <body class="<%= controller.controller_name %>">
 
-	<div class="container-fluid" style="max-width:1366px">
+	<div class="container-fluid" style="">
 		<div class="row" style="">
 			
 			<div id="sidebar" class="col-md-3 p-3 p-md-4 d-flex flex-column navbar-dark">
