--- a/app/views/layouts/page.html.erb
+++ b/app/views/layouts/page.html.erb
@@ -2,7 +2,7 @@
 	<script type="text/x-mathjax-config">
 		MathJax.Hub.Config({
 			showProcessingMessages: true,
-			extensions: [tex2jax]
+			extensions: ["tex2jax.js"]
 		});
 	</script>
 	<%= mathjax_tag %>
