--- a/app/views/grades/_form.html.erb
+++ b/app/views/grades/_form.html.erb
@@ -4,7 +4,7 @@
 
 	<div class="">
 		<span class="navbar-text">
-			<%= @pset.name %> by <%= @user.name %> <%= "/ #{@submit.used_login}" if @submit %>
+			<%= @pset.name %> <%= t(:by) %> <%= @user.name %> <%= "/ #{@submit.used_login}" if @submit %>
 			<span class="badge badge-dark"><%= @grade.status %></span>
 		</span>
 		
