--- a/app/views/timeline/_grade.html.erb
+++ b/app/views/timeline/_grade.html.erb
@@ -1,6 +1,6 @@
-<small><%= date_span_with_title(grade.created_at)%> by <%= grade.grader.name if grade.grader %></small>
+<small><%= date_span_with_title(grade.created_at)%> <%= t(:by) %> <%= grade.grader.name if grade.grader %></small>
 <h4>
-	<%= grade.pset.name %> was graded<br>
+	<%= grade.pset.name %> <%= t(:was_graded) %><br>
 </h4>
 <p id="grade_buttons">
 	<% grade.subgrades.each_pair do |k,v| %>
