--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -2,8 +2,8 @@
 
 	<% if logged_in? %>
 	<ul class="nav mt-2 mt-md-5">
-		<li><a href="/announcements" class="nav-link"><%= fa_icon 'bullhorn', class: 'mr-2' %> Announcements</a></li>
-		<li><a href="/syllabus" class="nav-link"><%= fa_icon 'book', class: 'mr-2' %> Syllabus</a></li>
+		<li><a href="/announcements" class="nav-link"><%= fa_icon 'bullhorn', class: 'mr-2' %> <%= t(:announcements) %></a></li>
+		<li><a href="/syllabus" class="nav-link"><%= fa_icon 'book', class: 'mr-2' %> <%= t(:syllabus) %></a></li>
 		<% if Settings['links'] %>
 		<% Settings['links'].each do |title, url|  %>
 		<li><%= link_to title.html_safe, url, class:"nav-link" %></li>
