--- a/app/views/status/index.html.erb
+++ b/app/views/status/index.html.erb
@@ -1,5 +1,5 @@
 <% @updates.each do |update| %>
-<h4><%= link_to update.user.name, update.user %> <span class="label label-default"><%= update.user.schedule.name %></span> <small><%= time_ago_in_words(update.updated_at) %> ago by <%= update.assist.name %></small></h4>
+<h4><%= link_to update.user.name, update.user %> <span class="label label-default"><%= update.user.schedule.name %></span> <small><%= time_ago_in_words(update.updated_at) %> <%= t(:ago) %> <%= t(:by) %> <%= update.assist.name %></small></h4>
 <p><%= update.note %></p>
 <hr>
 <% end %>
