--- a/app/assets/stylesheets/content.scss
+++ b/app/assets/stylesheets/content.scss
@@ -246,6 +246,14 @@ section .kramdown-table td, .kramdown-table th
     margin-bottom:2em;
 }
 
+#content .pull-right .embed
+{
+    margin-top:0;
+    margin-bottom:0;
+}
+
+
+
 
 //
 // OVERRIDES FOR MOBILE + TABLET
