--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -4,7 +4,7 @@
 		<% if logged_in? %>
 		<li><a href="/announcements" class="nav-link"><%= fa_icon 'bullhorn', class: 'mr-2' %> <%= t(:announcements) %></a></li>
 		<% end %>
-		<li><a href="/syllabus" class="nav-link"><%= fa_icon 'book', class: 'mr-2' %> <%= t(:syllabus) %></a></li>
+		<li><a href="/syllabus" class="nav-link"><%= fa_icon 'file', class: 'mr-2' %> <%= t(:syllabus) %></a></li>
 		<% if Settings['links'] %>
 		<% Settings['links'].each do |title, url|  %>
 		<li><%= link_to title.html_safe, url, class:"nav-link" %></li>
