--- a/app/assets/stylesheets/timeline.scss
+++ b/app/assets/stylesheets/timeline.scss
@@ -57,6 +57,11 @@
     margin-bottom:0;
 }
 
+#timeline h5
+{
+    margin-top:0;
+}
+
 //#timeline .list-group
 //{
 //    border: 2px solid #f8f9fa;
