--- a/app/assets/stylesheets/tweaks.scss
+++ b/app/assets/stylesheets/tweaks.scss
@@ -18,7 +18,7 @@
 
 .navbar-nav .dropdown-menu
 {
-    position: absolute;
+//    position: absolute;
 }
 
 @media screen and (-webkit-min-device-pixel-ratio:0) { 
