--- a/app/views/profile/_edit.html.erb
+++ b/app/views/profile/_edit.html.erb
@@ -1,4 +1,6 @@
-<%= form_tag '/profile/save', class:'profile-form' do |f| %>
+<%= form_tag '/profile/save', class:'profile-form px-4 py-3' do |f| %>
+
+<p>Please register! This will allow you to submit problems and otherwise participate in the course. If you're just browsing around, feel free to ignore.</p>
 
 <div class="form-group">
 	<label for="user_name">First and last name</label>
