--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -136,7 +136,7 @@
     padding-left:.25rem;
 }
 
-#ama-nav, #icon-nav .register-menu
+#ama-nav .dropdown-menu, #icon-nav .register-menu
 {
     min-width:400px;
 }
