--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -126,9 +126,9 @@
     width:1.5rem;
 }
 
-#icon-nav .dropdown-menu
+#ama-nav .dropdown-menu
 {
-//    min-width:300px;
+    min-width:200px;
 }
 
 #icon-nav .form-check
@@ -136,7 +136,7 @@
     padding-left:.25rem;
 }
 
-#ama-nav .dropdown-menu, #icon-nav .register-menu
+#icon-nav .register-menu
 {
     min-width:400px;
 }
