--- a/app/assets/stylesheets/fonts.scss
+++ b/app/assets/stylesheets/fonts.scss
@@ -66,23 +66,23 @@ span.underline
 }
 
 
-h1
+#content h1
 {
     margin-top:3em;
 }
 
-h1:first-child
+#content h1:first-child
 {
     margin-top:1em;
 }
 
-h2
+#content h2
 {
     margin-top:2em;
     margin-bottom:1em;
 }
 
-h3, h4, h5
+#content h3, h4, h5
 {
     margin-top:1.5em;
     margin-bottom:1em;
