--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -61,7 +61,7 @@
 					<%= yield %>
 				</div>
 
-				<%= yield :footer %>
+				<% #= yield :footer %>
 			</div>
 			
 		</div>
@@ -70,5 +70,26 @@
 	<div id="popup"></div>
 	
 </body>
+
+<% if !current_user.valid_profile? %>
+	<script type="text/javascript">
+	$(function () {
+		$('#user-menu').dropdown('toggle');
+		// $('#user-menu').dropdown('update');
+		return false;
+	});
+	
+	$('.profile-form').click(function(e) {
+	    e.stopPropagation();
+	});
+	
+	</script>
+<% end %>
+
+<script type="text/javascript">
+$(function () {
+  $('[data-toggle="tooltip"]').tooltip()
+});
+</script>
 
 </html>
