--- a/app/views/layouts/page.html.erb
+++ b/app/views/layouts/page.html.erb
@@ -9,7 +9,7 @@
 <% end %>
 
 <% content_for :footer do %>
-	<%= render 'layouts/footer' %>
+	<% #= render 'layouts/footer' %>
 <% end %>
 
 <%= render template: "layouts/application" %>
