--- a/app/views/user/_hand.html.erb
+++ b/app/views/user/_hand.html.erb
@@ -10,5 +10,5 @@
 	<% end %>
 </p>
 <% if hand.assist %>
-	<small class="author">Answered by <%= hand.assist.name %></small>
+	<small class="author">Answered by <%= hand.assist_name %></small>
 <% end %>
