--- a/app/views/user/_note.html.erb
+++ b/app/views/user/_note.html.erb
@@ -1,3 +1,3 @@
 <small><%= date_span_with_title(note.created_at)%></small>
 <%= simple_markdown(note.text) %>
-<small class="author"><%= note.author.name %></small>
+<small class="author"><%= note.author_name %></small>
