--- a/app/views/timeline/_grade.html.erb
+++ b/app/views/timeline/_grade.html.erb
@@ -1,4 +1,4 @@
-<small><%= date_span_with_title(grade.created_at)%> <%= t(:by) %> <%= grade.grader.name if grade.grader %></small>
+<small><%= date_span_with_title(grade.created_at)%> <%= t(:by) %> <%= grade.author_name %></small>
 <h4>
 	<%= grade.pset.name %> <%= t(:was_graded) %><br>
 </h4>
