--- a/app/views/config/permissions.html.erb
+++ b/app/views/config/permissions.html.erb
@@ -2,8 +2,8 @@
 	<tr>
 		<th>Name</th>
 		<th>Role</th>
-		<th>Schedules</th>
-		<th>Groups</th>
+		<th>Grades<br> schedules</th>
+		<th>Grades<br> groups</th>
 	</tr>
 
 <% @users.each do |user| %>
