--- a/app/views/application/_permissions_modal.html.erb
+++ b/app/views/application/_permissions_modal.html.erb
@@ -2,7 +2,7 @@
 	<div class="modal-dialog modal-lg" role="document">
 		<div class="modal-content">
 			<div id="permissions-modal-header" class="modal-header">
-				<h5 class="modal-title">Permissions</h5>
+				<h5 class="modal-title">Roles and grading permissions</h5>
 			</div>
 			<div id="permissions-modal-body" class="modal-body">
 				<p style="text-align:center; font-size:xx-large"><%= fa_icon 'cog', class:'fa-spin' %></p>
