store and display submitted files

--- a/app/views/grades/show.html.erb
+++ b/app/views/grades/show.html.erb
@@ -14,7 +14,7 @@
 <table class="table table-sm w-auto my-3">
 	<tr>
 		<td>Graded by:</td>
-		<td><%= @grade.author_name %></td>
+		<td><%= @grade.grader_name %></td>
 	</tr>
 	<tr>
 		<td>First submitted:</td>
