--- a/app/views/user/_grade.html.erb
+++ b/app/views/user/_grade.html.erb
@@ -8,4 +8,4 @@
 </p>
 
 <%= simple_markdown(grade.comments) %>
-<small class="author">Graded by <%= grade.author_name %></small>
+<small class="author">Graded by <%= grade.grader_name %></small>
