--- a/app/views/user/_submit.html.erb
+++ b/app/views/user/_submit.html.erb
@@ -1,2 +1,2 @@
 <small><%= date_span_with_title(submit.created_at)%></small>
-<h4>Submitted <%= submit.pset.name %></h4>
+<h4>Submitted <%= submit.pset_name %></h4>
