--- a/app/views/ask/_helping.html.erb
+++ b/app/views/ask/_helping.html.erb
@@ -1,6 +1,6 @@
 <div style="text-align: center; padding:1em;">
 	<div style="position:absolute; left:2px; top:0;"><%= link_to '<span class="glyphicon glyphicon-remove" data-toggle="tooltip" title="Cancel your help request!"></span>'.html_safe, ask_cancel_path, method: :post, remote: true %></div>
 	<h3 style="margin-bottom:0.75em;">The wait is over!</h3>
-	<img src="<%= @assist.avatar %>" style="width: 100px; height: 100px;">
+	<img src="<%= @assist.avatar %>" style="max-width: 200px; max-height: 150px;">
 	<p class="mb-0 mt-3"><%= @assist.name.split[0] %> is looking to assist you<br> right now.</p>
 </div>
