--- a/app/views/timeline/_staff.html.erb
+++ b/app/views/timeline/_staff.html.erb
@@ -21,7 +21,8 @@
 						<%= @new_students.count %> students have registered.
 						No grading groups have been defined yet.
 					</p>
-					<%= link_to 'Generate grading groups', admin_generate_groups_path(schedule_id: @schedule.id), class: 'btn btn-primary' %>
+					<%= link_to 'Generate', admin_generate_groups_path(schedule_id: @schedule.id), class: 'btn btn-primary' %>
+					<%= link_to 'Import', admin_import_path(schedule_id: @schedule.id), class: 'btn btn-primary' %>
 					<% end %>
 				</div>
 			</div>
