--- a/app/views/students/_table.html.erb
+++ b/app/views/students/_table.html.erb
@@ -35,7 +35,7 @@
 		
 		<td class="bar"><%= user.attendance %></td>
 		
-		<td><%= user.attendance %><%= user.questions_count_cache %></td>
+		<td><%= user.questions_count_cache %></td>
 		
 		<% if params[:status] == 'registered' %>
 		<td><%= user.started_at.strftime("%e %b") if user.started_at %></td>
