--- a/app/views/submits/show.html.erb
+++ b/app/views/submits/show.html.erb
@@ -38,26 +38,32 @@
 </div>
 
 <div class="col-7" style="overflow-y:scroll; min-height:0; box-shadow:gray 2px 0px 5px inset">
-	<% if @submit.url.present? %>
-	<iframe src="<%= @submit.url %>" class="w-100 h-100 m-0"></iframe>
-	<% end %>
 	
-	<% if @submit.file_contents.present? %>
+	<% if @submit.file_contents.present? || @submit.check_feedback.present? %>
 	<ul class="nav nav-tabs" id="files" role="tablist">
 		<% first = true %>
 		<% @submit.file_contents.each_key do |filename| %>
 		<li class="nav-item">
 			<a class="nav-link <%= (first = false) || 'active' if first %>" id="home-tab" data-toggle="tab" href="#file-<%= File.basename(filename, ".*") %>" role="tab" aria-controls="home" aria-selected="true"><%= filename %></a>
 		</li>
+		<% end if @submit.file_contents.present? %>
+		<% if @submit.check_feedback.present? %>
+		<li class="nav-item">
+			<a class="nav-link" id="home-tab" data-toggle="tab" href="#file-check" role="tab" aria-controls="home" aria-selected="true">check</a>
+		</li>
 		<% end %>
 	</ul>
 	<div class="tab-content" id="myTabContent">
 		<% first = true %>
 		<% @submit.file_contents.each do |filename, contents| %>
-		<div class="tab-pane fade show  <%= (first = false) || 'active' if first %>" id="file-<%= File.basename(filename, ".*") %>" role="tabpanel" aria-labelledby="home-tab"><%= CodeRay.scan(contents, File.extname(filename)[1..-1].to_sym).div.html_safe %></code></pre></div>
+		<div class="tab-pane fade show  <%= (first = false) || 'active' if first %>" id="file-<%= File.basename(filename, ".*") %>" role="tabpanel" aria-labelledby="home-tab"><%= CodeRay.scan(contents, File.extname(filename)[1..-1].to_sym).div.html_safe %></div>
+		<% end if @submit.file_contents.present? %>
+		<% if @submit.check_feedback.present? %>
+		<div class="tab-pane fade show  <%= (first = false) || 'active' if first %>" id="file-check" role="tabpanel" aria-labelledby="home-tab"><code><pre><%= @submit.check_feedback_formatted %></code></pre></div>
 		<% end %>
 	</div>
 	<% end %>
+	
 </div>
 
 	
